[package]
name = "sea-wars-websocket"
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"

[build]
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"]}
warp = "0.3.7"
